--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
       - "9000"
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.words.rule=Host(`malcorp.test`) && PathPrefix(`/v1/api/hello`)"
+      - "traefik.http.routers.words.rule=Host(`malcorp.test`)"
     environment:
       - ENV=dev
       #      volumes:
