words fixes and docker-compose.yml

--- a/words/Dockerfile
+++ b/words/Dockerfile
@@ -1,13 +1,12 @@
 FROM openjdk:8-jdk-alpine as builder
 
-
 COPY mvnw .
-COPY .mvn .mvn
+#COPY .mvn .mvn
 COPY pom.xml .
 COPY src src
 
 RUN chmod +x ./mvnw
-RUN ./mvnw install -DskipTests
+#RUN ./mvnw install -DskipTests
 RUN ./mvnw clean package
 #RUN mkdir -p target/dependency && (cd target/dependency; jar -xf ../*.jar)
 
