fake test for jenkins

--- a/words/src/main/resources/application.yml
+++ b/words/src/main/resources/application.yml
@@ -16,6 +16,8 @@ server:
     include-stacktrace: always
   port: 9000
   address: 0.0.0.0
+  servlet:
+    context-path: /words/api
 
 logging:
   level:
